# explayer

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  ExPlayer.pro  LICENSE  README  balance.cpp  balance.h  clazy.sh  controls.cpp  controls.h  controls.ui  dpms.cpp  dpms.h  format.sh  gstreamer.cpp  gstreamer.h  jumpdialog.cpp  jumpdialog.h  jumpdialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  metadata.cpp  metadata.h  osd.cpp  osd.h  player.cpp  player.h  settings.cpp  settings.h  subtitleeditor.cpp  subtitleeditor.h  tidy.sh  utils.h  utime.cpp  utime.h  version.h  (+6 more)
cmake/: README
gstreamer/: balance.h  discoverer.cpp  gstreamer.cpp  gstreamer.h  osd.cpp  videofilter.cpp  videofilter.h
src/: main.cpp  metadata.cpp  metadata.h  player.cpp  player.h  settings.h  subtitleeditor.cpp  utime.h
src/gstreamer/: balance.h  discoverer.cpp  discoverer.h  gstreamer.cpp  gstreamer.h  osd.cpp  osd.h  videofilter.h
src/ui/: controls.cpp  controls.h  jumpdialog.h  mainwindow.cpp  mainwindow.ui
